update static asset paths: replace `main_site.static` with `main_site_static.static` in templates

--- a/templates/bot_portal/archive.html
+++ b/templates/bot_portal/archive.html
@@ -69,5 +69,5 @@
 {% endblock %}
 
 {% block body_js %}
-<script src="{{ url_for('main_site.static', filename='js/archive.js') }}"></script>
+<script src="{{ url_for('main_site_static.static', filename='js/archive.js') }}"></script>
 {% endblock %}
