--- a/templates/bot_portal/editors.html
+++ b/templates/bot_portal/editors.html
@@ -4,7 +4,6 @@
 {% block head_meta %}
 <meta name="csrf-token" content="{{ csrf_token() }}">
 {% endblock %}
-{% block content %}
 
 {% block content %}
 <div class="py-12 max-w-6xl mx-auto">
@@ -69,5 +68,5 @@
 {% endblock %}
 
 {% block body_js %}
-<script src="{{ url_for('static', filename='js/editor_management.js') }}"></script>
+<script src="{{ url_for('main_site_static.static', filename='js/editor_management.js') }}"></script>
 {% endblock %}
