--- a/templates/layout.html
+++ b/templates/layout.html
@@ -70,9 +70,9 @@
             <p>&copy; 2025 Honji Review</p>
             <div class="flex flex-wrap justify-center gap-x-4 gap-y-2">
                 <a href="{{ url_for('main_site.community_rules', lang_code=g.lang_code) }}" class="hover:text-white">{{ _('Правила сообщества') }}</a>
-                <a href="{{ url_for('main_site.privacy_policy', lang_code=g.lang_code) }}" class="hover:text-white">{{ _('Privacy Policy') }}</a>
-                <a href="{{ url_for('main_site.licenses', lang_code=g.lang_code) }}" class="hover:text-white">{{ _('Licenses') }}</a>
-                <a href="{{ url_for('main_site.disclaimer', lang_code=g.lang_code) }}" class="hover:text-white">{{ _('Disclaimer') }}</a>
+                <a href="{{ url_for('main_site.privacy_policy', lang_code=g.lang_code) }}" class="hover:text-white">{{ _('Политика конфиденциальности') }}</a>
+                <a href="{{ url_for('main_site.licenses', lang_code=g.lang_code) }}" class="hover:text-white">{{ _('Лицензии') }}</a>
+                <a href="{{ url_for('main_site.disclaimer', lang_code=g.lang_code) }}" class="hover:text-white">{{ _('Отказ от отвественности') }}</a>
             </div>
         </div>
     </div>
