--- a/templates/main_site/privacy_policy.html
+++ b/templates/main_site/privacy_policy.html
@@ -32,7 +32,7 @@
         </ul>
 
         <h2>{{ _('Безопасность данных') }}</h2>
-        <p>{{ _('Безопасность ваших данных важна для нас, но помните, что ни один метод передачи через Интернет или метод электронного хранения не является на 100% безопасным. Хотя мы стремимся использовать коммерчески приемлемые средства для защиты вашей личной информации, мы не можем гарантировать ее абсолютную безопасность.') }}</p>
+        <p>{{ _('Безопасность ваших данных важна для нас, но помните, что ни один метод передачи через Интернет или метод электронного хранения не является на 100%% безопасным. Хотя мы стремимся использовать коммерчески приемлемые средства для защиты вашей личной информации, мы не можем гарантировать ее абсолютную безопасность.') }}</p>
 
         <h2>{{ _('Ссылки на другие сайты') }}</h2>
         <p>{{ _('Наш Сервис может содержать ссылки на другие сайты, которые не управляются нами. Если вы нажмете на ссылку третьей стороны, вы будете перенаправлены на сайт этой третьей стороны. Мы настоятельно рекомендуем вам ознакомиться с Политикой конфиденциальности каждого сайта, который вы посещаете.') }}</p>
