--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Honji Review{% endblock %}</title>
+    <title>{% block title %}Honji Review. CC BY-NC-SA{% endblock %}</title>
     <link rel="icon" href="{{ url_for('main_site_static.static', filename='images/favicon.png') }}" type="image/x-icon">
     <link rel="shortcut icon" href="{{ url_for('main_site_static.static', filename='images/favicon.png') }}" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
