--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Honji Review. CC BY-NC-SA{% endblock %}</title>
+    <title>{% block title %}Honji Review{% endblock %}</title>
     <link rel="icon" href="{{ url_for('main_site_static.static', filename='images/favicon.png') }}" type="image/x-icon">
     <link rel="shortcut icon" href="{{ url_for('main_site_static.static', filename='images/favicon.png') }}" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -62,6 +62,7 @@
                 <a href="{{ url_for('main_site.discussed', lang_code=g.lang_code) }}" class="hover:opacity-75 transition-opacity">{{ _('Обсуждаемое') }}</a>
                 <a href="{{ url_for('main_site.reviews', lang_code=g.lang_code) }}" class="hover:opacity-75 transition-opacity">{{ _('Рецензии') }}</a>
                 <a href="{{ url_for('main_site.about', lang_code=g.lang_code) }}" class="hover:opacity-75 transition-opacity">{{ _('О нас') }}</a>
+                <a href="{{ url_for('main_site.contact', lang_code=g.lang_code) }}" class="hover:opacity-75 transition-opacity">{{ _('Контакты') }}</a>
             </div>
             <div class="flex items-center space-x-6">
             </div>
@@ -70,9 +71,9 @@
             <p>&copy; 2025 Honji Review</p>
             <div class="flex flex-wrap justify-center gap-x-4 gap-y-2">
                 <a href="{{ url_for('main_site.community_rules', lang_code=g.lang_code) }}" class="hover:text-white">{{ _('Правила сообщества') }}</a>
-                <a href="{{ url_for('main_site.privacy_policy', lang_code=g.lang_code) }}" class="hover:text-white">{{ _('Политика конфиденциальности') }}</a>
-                <a href="{{ url_for('main_site.licenses', lang_code=g.lang_code) }}" class="hover:text-white">{{ _('Лицензии') }}</a>
-                <a href="{{ url_for('main_site.disclaimer', lang_code=g.lang_code) }}" class="hover:text-white">{{ _('Отказ от отвественности') }}</a>
+                <a href="{{ url_for('main_site.privacy_policy', lang_code=g.lang_code) }}" class="hover:text-white">{{ _('Privacy Policy') }}</a>
+                <a href="{{ url_for('main_site.licenses', lang_code=g.lang_code) }}" class="hover:text-white">{{ _('Licenses') }}</a>
+                <a href="{{ url_for('main_site.disclaimer', lang_code=g.lang_code) }}" class="hover:text-white">{{ _('Disclaimer') }}</a>
             </div>
         </div>
     </div>
