--- a/templates/layout.html
+++ b/templates/layout.html
@@ -68,12 +68,12 @@
             </div>
         </div>
         <div class="mt-8 pt-8 border-t border-[#232325] text-sm text-[#8F8F90] flex flex-col md:flex-row justify-between items-center gap-4">
-            <p>&copy; 2025 Honji Review</p>
+            <p>&copy; 2025 Honji Review | CC BY-NC-SA</p>
             <div class="flex flex-wrap justify-center gap-x-4 gap-y-2">
                 <a href="{{ url_for('main_site.community_rules', lang_code=g.lang_code) }}" class="hover:text-white">{{ _('Правила сообщества') }}</a>
-                <a href="{{ url_for('main_site.privacy_policy', lang_code=g.lang_code) }}" class="hover:text-white">{{ _('Privacy Policy') }}</a>
-                <a href="{{ url_for('main_site.licenses', lang_code=g.lang_code) }}" class="hover:text-white">{{ _('Licenses') }}</a>
-                <a href="{{ url_for('main_site.disclaimer', lang_code=g.lang_code) }}" class="hover:text-white">{{ _('Disclaimer') }}</a>
+                <a href="{{ url_for('main_site.personal_data_policy', lang_code=g.lang_code) }}" class="hover:text-white">{{ _('Политика обработки персональных данных') }}</a>
+                <a href="{{ url_for('main_site.licenses', lang_code=g.lang_code) }}" class="hover:text-white">{{ _('Лицензии') }}</a>
+                <a href="{{ url_for('main_site.disclaimer', lang_code=g.lang_code) }}" class="hover:text-white">{{ _('Отказ от ответственности') }}</a>
             </div>
         </div>
     </div>
