--- a/templates/main_site/licenses.html
+++ b/templates/main_site/licenses.html
@@ -14,8 +14,8 @@
         <div class="about-card">
             <h2 class="text-2xl font-bold mb-4">Участники</h2>
             <div class="border-t border-white/10 pt-4">
-                <h3 class="font-semibold">Дизайн</h3>
-                <p class="text-sm text-slate-400">Дизайном страниц занималась Раяна.</p>
+                <h3 class="font-semibold">Дизайн сайта</h3>
+                <p class="text-sm text-slate-400">Раяна</p>
                 <ul class="list-disc list-inside mt-2">
                     <li><a href="https://t.me/Obulochkaaa" target="_blank" rel="noopener" class="text-indigo-400 hover:underline">Telegram: @Obulochkaaa</a></li>
                     <li><a href="mailto:0559101089r@gmail.com" target="_blank" rel="noopener" class="text-indigo-400 hover:underline">E-Mail: 0559101089r@gmail.com</a></li>
